Fixed popout alignment

--- a/frontend/src/components/MainNavigation/MainNavigation.css
+++ b/frontend/src/components/MainNavigation/MainNavigation.css
@@ -73,7 +73,8 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    right: 5vw;
+    /* right: 5vw; */
+    /* margin-right: 5rem; */
     top: 40px;
     background-color: white;
     width: 150px;
