--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     align-self: flex-end;
-    /* position: fixed; */
+    position: fixed;
     /* right: 75px; */
     top: 40px;
     background-color: white;
